--- a/databaseservice/Parking.settings
+++ b/databaseservice/Parking.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="Connection" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Data Source=.\SQLEXPRESS;Initial Catalog=parking;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=.\SQLEXPRESS;Initial Catalog=Parking;Integrated Security=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
