--- a/databaseservice/app.config
+++ b/databaseservice/app.config
@@ -8,7 +8,7 @@
     <userSettings>
         <databaseservice.Parking>
             <setting name="Connection" serializeAs="String">
-                <value>Data Source=.\SQLEXPRESS;Initial Catalog=parking;Integrated Security=True</value>
+                <value>Data Source=.\SQLEXPRESS;Initial Catalog=Parking;Integrated Security=True</value>
             </setting>
         </databaseservice.Parking>
     </userSettings>
