--- a/kursach/kursach.csproj
+++ b/kursach/kursach.csproj
@@ -45,7 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AddCarControllerd.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\ChangeCarController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MyCarsController.cs" />
     <Compile Include="Controllers\MyProfileController.cs" />
@@ -136,6 +139,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AdminForm.resx">
       <DependentUpon>AdminForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ChangeCarForm.resx">
+      <DependentUpon>ChangeCarForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ChangeCarsOwner.resx">
       <DependentUpon>ChangeCarsOwner.cs</DependentUpon>
